--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.3.0",
+    "@emotion/react": "^11.5.0",
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
     "react": "17.0.2",
