--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.16",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/react": "^11.5.0",
+    "apollo-link-http": "^1.5.17",
+    "graphql": "^16.0.0",
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
     "react": "17.0.2",
