--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-minimal-pie-chart": "^8.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.15.4",
