--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "11.1.2",
     "next-pwa": "^5.4.0",
     "react": "17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "17.0.2",
     "react-minimal-pie-chart": "^8.2.0"
   },
@@ -25,6 +26,7 @@
     "@next/eslint-plugin-next": "^11.0.0",
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.6",
+    "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
